# data_projects

10k/: tesla.ipynb
forecasting_stocks/: api_key.txt  forecasting_stock_prices.ipynb
google_books/: get_google_books_data.py  second_edition_get_google_books_data.py
google_books/notebooks/: combined_books.csv  google_books_.ipynb
stock market anomaly detection/: Makefile  README.md  pyproject.toml
stock market anomaly detection/notebooks/: stock_market_anomaly_detection_.ipynb
stock market anomaly detection/stock_market_anomaly_detection/: __init__.py  dataset.py  features.py  plots.py
stock market anomaly detection/stock_market_anomaly_detection/modeling/: predict.py  train.py
stock market prediction/: Makefile  README.md  pyproject.toml  stock_price_movement_.ipynb
stock market prediction/stock_market_preditction/: __init__.py  dataset.py  features.py  plots.py
stock market prediction/stock_market_preditction/modeling/: predict.py  train.py
titanic/: titanic_survival_predictions.ipynb
x_sentiment_analysis/x_sentiment_analysis/: Makefile  README.md  pyproject.toml
x_sentiment_analysis/x_sentiment_analysis/notebooks/: saved code for using x api to fetch tw.py  x_sentiment_analysis_.ipynb
x_sentiment_analysis/x_sentiment_analysis/x_sentiment_analysis/: __init__.py  dataset.py  features.py  plots.py
x_sentiment_analysis/x_sentiment_analysis/x_sentiment_analysis/modeling/: predict.py  train.py
