[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_market_anomaly_detection"
version = "0.0.1"
description = "This project involves identifying unusual patterns in stock market data that might indicate anomalies or potential fraud. It uses anomaly detection techniques rather than traditional classification."
authors = [
  { name = "adam daves" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stock_market_anomaly_detection"]
force_sort_within_sections = true
