[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_market_preditction"
version = "0.0.1"
description = "predicting whether a stocks price will go up or down using machine learning"
authors = [
  { name = "adam daves" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["stock_market_preditction"]
force_sort_within_sections = true
