[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "x_sentiment_analysis"
version = "0.0.1"
description = "to utilize the x api and fetch some tweets relating to a company of my choosing. use machine learning to process this text and perform a sentiment analysis on the tweets. assigning a 1 for positive, 0 for neutral, and -1 for negative."
authors = [
  { name = "adam daves" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["x_sentiment_analysis"]
force_sort_within_sections = true
